--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -58,6 +58,26 @@
     "message": "prostřední",
     "description": "middle"
   },
+  "settingNameSuppressionKey": {
+    "message": "Gesture suppression key",
+    "description": "Gesture suppression key"
+  },
+  "settingNameNoneKey": {
+    "message": "None",
+    "description": "None"
+  },
+  "settingNameAltKey": {
+    "message": "Alt",
+    "description": "Alt"
+  },
+  "settingNameCtrlKey": {
+    "message": "Ctrl",
+    "description": "Ctrl"
+  },
+  "settingNameShiftKey": {
+    "message": "Shift",
+    "description": "Shift"
+  },
   "settingNameAdvancedSettings": {
     "message": "Pokročilé nastavení",
     "description": "Advanced settings"
@@ -153,6 +173,10 @@
     "message": "Tlačítko myši které spustí gesto.",
     "description": "The mouse button which will trigger the gesture."
   },
+  "settingDescriptionSuppressionKey": {
+    "message": "Disables the mouse gesture if the key is pressed.",
+    "description": "Disables the mouse gesture if the key is pressed."
+  },
   "settingDescriptionDistanceThreshold": {
     "message": "Minimální vzdálenost kterou myš urazí než se aktivuje gesto.",
     "description": "The minimum mouse distance until the Gesture gets activated."
@@ -196,6 +220,40 @@
   "settingDescriptionDirectionsBackgroundOpacity": {
     "message": "Můžete použít libovolnou hodnotu od 0 (neviditelné) do 1 (viditelné)",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  },
+
+  "settingNameHomepageURL": {
+    "message": "Homepage URL",
+    "description": "Homepage URL"
+  },
+  "settingNameScrollDuration": {
+    "message": "Scroll duration",
+    "description": "Scroll duration"
+  },
+  "settingNameNewTabOnEmptyLink": {
+    "message": "Open empty tab",
+    "description": "Open empty tab"
+  },
+  "settingNameSearchEngineURL": {
+    "message": "Search engine URL",
+    "description": "Search engine URL"
+  },
+
+  "settingDescriptionScrollDuration": {
+    "message": "Duration in milliseconds for scroll top/bottom.",
+    "description": "Duration in milliseconds for scroll top/bottom."
+  },
+  "settingDescriptionScrollPageDuration": {
+    "message": "Duration in milliseconds for scroll page up/down.",
+    "description": "Duration in milliseconds for scroll page up/down."
+  },
+  "settingDescriptionNewTabOnEmptyLink": {
+    "message": "Determines if an empty tab should be opened if no URL was selected.",
+    "description": "Determines if an empty tab should be opened if no URL was selected."
+  },
+  "settingDescriptionSearchEngineURL": {
+    "message": "The URL to query a search by appending the search text to the end.",
+    "description": "The URL to query a search by appending the search text to the end."
   },
 
   "explanationGesturesHeading": {
@@ -375,6 +433,14 @@
     "message": "Náhled tisku",
     "description": "Print preview"
   },
+  "actionNameOpenHomepage": {
+    "message": "Open homepage",
+    "description": "Open homepage"
+  },
+  "actionNameLinkToBookmark": {
+    "message": "Link to bookmark",
+    "description": "Link to bookmark"
+  },
 
   "actionDescriptionBookmark": {
     "message": "Přidá nebo odebere záložku.",
@@ -517,7 +583,7 @@
     "Name": "Opens either a selected link, or the link where the gesture started, in a new background tab."
   },
   "actionDescriptionSearchSelection": {
-    "message": "Spustí vyhledávání vybraného textu. (Zatím jen google)",
+    "message": "Spustí vyhledávání vybraného textu.",
     "description": "Starts a web search of the selected text."
   },
   "actionDescriptionRemoveRight": {
@@ -543,6 +609,14 @@
   "actionDescriptionPrintPreview": {
     "message": "Otevře náhled tisku aktuální stránky.",
     "description": "Opens the print preview of the current page."
+  },
+  "actionDescriptionOpenHomepage": {
+    "message": "Works like the homepage button.",
+    "description": "Works like the homepage button."
+  },
+  "actionDescriptionLinkToBookmark": {
+    "message": "Saves either a selected link, or the link where the gesture started, as a bookmark.",
+    "description": "Saves either a selected link, or the link where the gesture started, as a bookmark."
   },
 
   "extraNameRockerActive": {
@@ -588,11 +662,11 @@
   },
 
   "toggleButtonOn": {
-    "message": "Zapnuto",
+    "message": "On",
     "description": "On - setting checked"
   },
   "toggleButtonOff": {
-    "message": "Vypnuto",
+    "message": "Off",
     "description": "Off - setting not checked"
   },
 
