added backup, restore and reset; added new actions: screen shot, copy url, copy selection, copy image; added advanced settings: new tab position, remove tab focus, zoom step; removed new tab after and new tab right; enhanced link to bookmark, open background link, zoom in/out behavior

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -222,6 +222,46 @@
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
 
+  "settingNameRemoveTabFocus": {
+    "message": "Focus tab",
+    "description": "Focus tab"
+  },
+  "settingNameRemoveTabFocusDefault": {
+    "message": "default",
+    "description": "default"
+  },
+  "settingNameRemoveTabFocusPrevious": {
+    "message": "previous",
+    "description": "previous"
+  },
+  "settingNameRemoveTabFocusRight": {
+    "message": "right",
+    "description": "right"
+  },
+  "settingNameRemoveTabFocusLeft": {
+    "message": "left",
+    "description": "left"
+  },
+  "settingNameNewTabPosition": {
+    "message": "Tab position",
+    "description": "Tab position"
+  },
+  "settingNameNewTabPositionDefault": {
+    "message": "default",
+    "description": "default"
+  },
+  "settingNameNewTabPositionBefore": {
+    "message": "before",
+    "description": "before"
+  },
+  "settingNameNewTabPositionAfter": {
+    "message": "after",
+    "description": "after"
+  },
+  "settingNameZoomStep": {
+    "message": "Zoom step",
+    "description": "Zoom step"
+  },
   "settingNameHomepageURL": {
     "message": "Domovská stránka",
     "description": "Homepage URL"
@@ -255,6 +295,18 @@
     "message": "The URL to query a search by appending the search text to the end.",
     "description": "The URL to query a search by appending the search text to the end."
   },
+  "settingDescriptionRemoveTabFocus": {
+    "message": "Defines which tab should gain focus.",
+    "description": "Defines which tab should gain focus."
+  },
+  "settingDescriptionNewTabPosition": {
+    "message": "Defines where the newly created tab should be inserted.",
+    "description": "Defines where the newly created tab should be inserted."
+  },
+  "settingDescriptionZoomStep": {
+    "message": "The zoom in/out step in percentage. If left blank, the default zoom levels are used.",
+    "description": "The zoom in/out step in percentage. If left blank, the default zoom levels are used."
+  },
 
   "explanationGesturesHeading": {
     "message": "Informace:",
@@ -276,14 +328,6 @@
   "actionNameNewTab": {
     "message": "Nový panel",
     "description": "New tab"
-  },
-  "actionNameNewTabAfter": {
-    "message": "Nový panel vpravo",
-    "description": "New tab right"
-  },
-  "actionNameNewTabBefore": {
-    "message": "Nový panel vlevo",
-    "description": "New tab left"
   },
   "actionNameReload": {
     "message": "Obnovit",
@@ -441,6 +485,22 @@
     "message": "Přidat odkaz do záložek",
     "description": "Link to bookmark"
   },
+  "actionNameSaveScreenshot": {
+    "message": "Save Screenshot",
+    "description": "Save Screenshot"
+  },
+  "actionNameCopyTabURL": {
+    "message": "Copy Tab URL",
+    "description": "Copy Tab URL"
+  },
+  "actionNameCopyTextSelection": {
+    "message": "Copy Text Selection",
+    "description": "Copy Text Selection"
+  },
+  "actionNameCopyImage": {
+    "message": "Copy Image",
+    "description": "Copy Image"
+  },
 
   "actionDescriptionBookmark": {
     "message": "Přidá nebo odebere záložku.",
@@ -453,14 +513,6 @@
   "actionDescriptionNewTab": {
     "message": "Otevře nový panel.",
     "description": "Opens a new tab."
-  },
-  "actionDescriptionNewTabAfter": {
-    "message": "Otevře nový panel vpravo od aktuální záložky.",
-    "description": "Opens a new tab to the right of the current tab."
-  },
-  "actionDescriptionNewTabBefore": {
-    "message": "Otevře nový panel vlevo od aktuální záložky.",
-    "description": "Opens a new tab to the left of the current tab."
   },
   "actionDescriptionReload": {
     "message": "Obnoví aktuální stránku.",
@@ -618,6 +670,22 @@
     "message": "Uloží buď označený odkaz, nebo odkaz na kterém gesto začalo, do záložek.",
     "description": "Saves either a selected link, or the link where the gesture started, as a bookmark."
   },
+  "actionDescriptionSaveScreenshot": {
+    "message": "Saves the current visible website area as an image.",
+    "description": "Saves the current visible website area as an image."
+  },
+  "actionDescriptionCopyTabURL": {
+    "message": "Copies the URL of the current tab to clipboard.",
+    "description": "Copies the URL of the current tab to clipboard."
+  },
+  "actionDescriptionCopyTextSelection": {
+    "message": "Copies the current text selection to clipboard.",
+    "description": "Copies the current text selection to clipboard."
+  },
+  "actionDescriptionCopyImage": {
+    "message": "Copies the image, where the gesture started, to clipboard.",
+    "description": "Copies the image, where the gesture started, to clipboard."
+  },
 
   "extraNameRockerActive": {
     "message": "Houpací gesta",
@@ -689,6 +757,38 @@
         "example" : "Previous tab"
       }
     }
+  },
+
+  "aboutBackup": {
+    "message": "Backup",
+    "description": "Backup"
+  },
+  "aboutRestore": {
+    "message": "Restore",
+    "description": "Restore"
+  },
+  "aboutReset": {
+    "message": "Reset",
+    "description": "Reset"
+  },
+
+  "aboutRestoreNotificationSuccess": {
+    "message": "$IMPORTEDSETTINGS$ settings have been successfully restored.",
+    "description": "$IMPORTEDSETTINGS$ settings have been successfully restored.",
+    "placeholders": {
+      "importedSettings" : {
+        "content" : "$1",
+        "example" : "50"
+      }
+    }
+  },
+  "aboutRestoreNotificationWrongFile": {
+    "message": "The selected file does not match the required file type.",
+    "description": "The selected file does not match the required file type."
+  },
+  "aboutResetNotificationConfirm": {
+    "message": "All settings including gestures are reset. This cannot be undone!",
+    "description": "All settings including gestures are reset. This cannot be undone!"
   },
 
   "aboutLicense": {
